--- a/.prettierrc
+++ b/.prettierrc
@@ -1,17 +1,24 @@
 {
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
   "trailingComma": "all",
   "singleQuote": false,
   "semi": true,
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "lf",
+  "experimentalTernaries": true,
   "overrides": [
     {
       "files": [".prettierrc"],
       "options": {
         "parser": "json"
       }
+    },
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
     }
-  ],
-  "experimentalTernaries": true
+  ]
 }
