--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,5 +24,5 @@
 eslint.config.ts  @lishaduck
 package.json      @lishaduck
 pnpm-lock.yaml    @lishaduck
-tsconfig.*json    @lishaduck
+tsconfig.json    @lishaduck
 vite.config.ts    @lishaduck
