--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,11 @@
     "webhint.vscode-webhint",
     "christian-kohler.npm-intellisense",
     "davidanson.vscode-markdownlint",
-    "swellaby.node-pack"
+    "swellaby.node-pack",
+    "svelte.svelte-vscode",
+    "tauri-apps.tauri-vscode",
+    "rust-lang.rust-analyzer",
+    "vitest.explorer",
+    "inlang.vs-code-extension"
   ]
 }
