--- a/packages/deputy/package.json
+++ b/packages/deputy/package.json
@@ -14,8 +14,8 @@
   },
   "type": "module",
   "scripts": {
-    "typecheck:src": "tsc",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings=0",
+    "typecheck": "tsc",
+    "lint": "eslint . --max-warnings=0",
     "lint:fix": "pnpm run lint --fix"
   },
   "exports": {
@@ -24,15 +24,17 @@
   "dependencies": {
     "@cspell/eslint-plugin": "^8.17.2",
     "eslint-config-sheriff": "^25.6.0",
-    "eslint-define-config": "^2.1.0",
-    "eslint-plugin-perfectionist": "^4.6.0"
+    "eslint-plugin-perfectionist": "^4.6.0",
+    "eslint-plugin-svelte": "^3.0.0-next.15",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.20.0"
   },
   "peerDependencies": {
     "eslint": "^9.18.0"
   },
   "devDependencies": {
-    "@eslint-types/unicorn": "^52.0.0",
     "@psdtools/tsconfig": "workspace:*",
+    "@sveltejs/kit": "^2.16.0",
     "eslint": "^9.18.0",
     "jiti": "^2.4.2",
     "typescript": "~5.7.3"
