--- a/turbo.json
+++ b/turbo.json
@@ -18,29 +18,21 @@
       ]
     },
     "typecheck": {
-      "dependsOn": [
-        "typecheck:src",
-        "typecheck:extra"
-      ]
-    },
-    "typecheck:src": {
       "outputs": [
         "node_modules/.cache/tsbuildinfo.json"
       ],
       "inputs": [
         "src/**",
+        "*.config.{js,ts}",
         "tsconfig.json"
       ]
     },
-    "typecheck:extra": {
-      "outputs": [
-        "node_modules/.cache/tsbuildinfo.extra.json"
-      ],
+    "petal-notes#typecheck": {
       "inputs": [
-        "eslint.config.ts",
-        "tailwind.config.ts",
-        "vite.config.ts",
-        "tsconfig.extra.json"
+        ".svelte-kit/**",
+        "src/**",
+        "*.config.{js,ts}",
+        "tsconfig.json"
       ]
     },
     "//#format": {
@@ -66,7 +58,7 @@
         "**/*.html",
         "**/*.ts",
         "**/*.md",
-        "tsconfig*.json",
+        "tsconfig.json",
         "turbo.json",
         "**/*.js",
         "**/*.css",
