--- a/apps/petal-notes/package.json
+++ b/apps/petal-notes/package.json
@@ -8,7 +8,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "typecheck": "svelte-check --tsconfig ./tsconfig.json",
     "typecheck:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint . --max-warnings=0",
@@ -32,8 +33,8 @@
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/vite": "4.0.0-beta.9",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "4.0.0-beta.9",
     "@total-typescript/ts-reset": "^0.6.1",
     "@vitest/browser": "^3.0.2",
     "@vitest/coverage-v8": "^3.0.2",
