refactor: move tests

--- a/apps/petal-notes/turbo.json
+++ b/apps/petal-notes/turbo.json
@@ -35,6 +35,7 @@
         "*.config.{js,ts}",
         "tsconfig.json"
       ],
+      "outputs": [],
       "dependsOn": ["prepare"]
     },
     "typecheck:watch": {
