--- a/apps/gpa-calculator/package.json
+++ b/apps/gpa-calculator/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@psdtools/tsconfig": "workspace:^",
+    "@tailwindcss/vite": "4.0.0-beta.9",
     "@total-typescript/ts-reset": "^0.6.1",
     "@vite-pwa/assets-generator": "^0.2.6",
     "browserslist": "^4.24.4",
@@ -47,6 +48,7 @@
     "fontaine": "^0.5.0",
     "jiti": "^2.4.2",
     "lightningcss": "^1.29.1",
+    "tailwindcss": "4.0.0-beta.9",
     "typescript": "~5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-html-minifier": "^1.0.5",
